# inference_ingestion_mutiTurn_multiProvider_Ai_chatBot

./: .gitignore  ARCHITECTURE.md  DOCKER_TUTORIAL.md  PII.md  Readme.md  assesment_app.md  dashboard.md  db.md  docker-compose.yml  guide.md  ingestion.md  multiprovider.md  multiturn_context_chatui.md  sdk.md  stream.md  todo.md
chatui/: .dockerignore  Dockerfile  nginx.conf  package.json  pnpm-lock.yaml
chatui/src/: App.css  App.tsx
chatui/src/api/: axios.config.ts  chat.api.ts  metrics.api.ts
chatui/src/components/: Sidebar.tsx
chatui/src/config/: runtime.ts
chatui/src/pages/: Chat.tsx  Dashboard.tsx
chatui/src/schemas/: dashboard.schemas.ts  run_ai.schemas.ts
server/: .dockerignore  Dockerfile  llm-events.sql  pyproject.toml
server/src/: server.py
server/src/core/: config.py  redaction.py
server/src/db/: db.py  mydb.db
server/src/events/: broker.py  consumer.py
server/src/models/: chat_models.py  llm_enference_models.py
server/src/provider/: anthropic_provider.py  base.py  gemini_provider.py  open_ai_provider.py  registry.py
server/src/routes/: dashboard_routes.py  llm_event_routes.py  run_ai_routes.py
server/src/sdk/: llm_event_tracker.py
server/src/services/: ai.py
