[project]
name = "server"
version = "0.1.0"
description = ""
authors = [
    {name = "Arpan Mondal",email = "arpanmondal572@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai (>=2.6.0,<3.0.0)",
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn (>=0.48.0,<0.49.0)",
    "pydantic[email] (>=2.13.4,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pymongo (>=4.17.0,<5.0.0)",
    "websockets (==15.0.1)",
    "httpx (>=0.28.1,<0.29.0)",
    "openai (>=2.43.0,<3.0.0)",
    "anthropic (>=0.111.0,<0.112.0)",
    "redis (>=8.0.1,<9.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
